[package]
name = "doh"
version = "0.1.0"
edition = "2024"
authors = ["Gabriele Cabrini <gabrielecabriniii@gmail.com>"]
license = "MIT"
repository = "https://github.com/gabrielecabrini/doh"

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = "1.0.228"
num_enum = "0.7.5"
serde_json = "1.0.145"
clap = { version = "4.5.53", features = ["derive"] }